Correction d'un align-items dégueulasse

--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,16 @@ footer ul .fa-solid {
     -webkit-box-shadow: 0px 0px 16px -4px #353535;
     box-shadow: 0px 0px 16px -4px #353535;
   }
+  .menu_cards .menu_card .menu_card_content .menu_card_price {
+    display: flex;
+    align-items: flex-end;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    align-items: center;
+    padding-bottom: 0;
+    padding-right: 10px;
+    max-width: 100%;
+  }
 }
 .restaurants_cards h3, .restaurants_cards p {
   font-family: "Roboto", sans-serif;
